# TAMIR

./: .gitignore  README.md  dependencies.txt  exampleOfCorrectDoc.txt  install_dependencies.sh  instructions.md
deliverables/week1/: first recall.webm  good trigger.webm
deliverables/week4/: Screencast from 2025-02-04 00-05-02.webm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tamir/lib/tamir/: bluetooth_node  playmusic_node
install/tamir/share/tamir/: package.sh  startup.launch.py  toast_view.rviz
install/tamir_interface/include/tamir_interface/tamir_interface/srv/detail/: waypoints__type_support.c
install/tamir_interface/share/ament_index/resource_index/parent_prefix_path/: tamir_interface
install/tamir_interface/share/tamir_interface/: local_setup.sh  package.sh
log/: latest_build
myenv/: pyvenv.cfg
rosbot_2r/rosbot/: dependencies.txt  install_dependencies.sh  package.xml  requirements.txt  setup.py
rosbot_2r/rosbot-telepresence/: compose.custom.yaml  justfile
rosbot_2r/rosbot/launch/: image_recognition_laptop.py
rosbot_2r/rosbot/rosbot/: processDepth.py  processImage.py  tracker.py
rosbot_2r/src/tutorial_pkg/: CMakeLists.txt  package.xml  set.py  tracker.cpp
rosbot_2r/src/tutorial_pkg/include/tutorial_pkg/: tracker.hpp
rosbot_2r/src/tutorial_pkg/launch/: my_launch_file.launch.py
rosbot_2r/src/tutorial_pkg/src/: my_first_node.cpp  tracker.cpp  tracker.py
tags/: .~lock.tag0-1.pdf#  tag0-1.odg  tags3.odt
tamir/: install_dependencies.sh  instructions.md  requirements.txt  setup.cfg  setup.py
tamir/config/: tags.yaml  toast_view.rviz
tamir/install/: local_setup.sh  setup.sh
tamir/install/tamir/share/tamir/: package.sh
tamir/launch/: image_recognition_laptop.py  startup.launch.py
tamir/log/: latest_build
tamir/myenv/: pyvenv.cfg
tamir/tamir/: bluetooth.py  camera_localizer.py  processDepth.py  processImage.py  tamir_interface.py  tracker.py  vision.py
tamir_interface/: CMakeLists.txt
tamir_interface/msg/: ProcessedDepthImage.msg
