<?xml version="1.0"?>
<package format="3">
  <name>tutorial_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 Python package</description>
  <maintainer email="cyberasasoftware@gmail.com">husarion</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
